test/parserTest/fail/test6.ic
class BadFormals {
	void badMethod (string s, a, b, c) {
	
	}
}